--- a/log-in/package.json
+++ b/log-in/package.json
@@ -10,7 +10,7 @@
     "test": "npm run tsc && env-cmd -f ./.env.test mocha './build/test/*' --recursive --no-warnings --exit",
     "api-schema-builder": "npx @janiscommerce/api-schema-builder",
     "test-schema": "npx @redocly/cli preview-docs schemas/public.json",
-    "generate-html": "npx redoc-cli bundle schemas/public.json schemas/; mv redoc-static.html src/public/",
+    "generate-html": "npx @redocly/cli build-docs schemas/public.json",
     "doc": "npm run api-schema-builder; npm run test-schema"
   },
   "author": "",
