--- a/log-in/package.json
+++ b/log-in/package.json
@@ -26,7 +26,6 @@
     "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
-    "axios": "^1.4.0",
     "chai": "^4.3.7",
     "env-cmd": "^10.1.0",
     "mocha": "^10.2.0",
@@ -41,6 +40,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^5.13.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "axios": "^1.4.0"
   }
 }
