--- a/log-in/package.json
+++ b/log-in/package.json
@@ -33,14 +33,16 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/express-jwt": "^7.4.2",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
+    "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^5.13.15",
-    "morgan": "^1.10.0",
-    "axios": "^1.4.0"
+    "morgan": "^1.10.0"
   }
 }
