--- a/log-in/schemas/src/public/auth/base.yml
+++ b/log-in/schemas/src/public/auth/base.yml
@@ -1,7 +1,7 @@
 components:
   schemas:
     User:
-      description: Un usuario
+      description: A User
       type: object
       properties:
         _id:
